@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.1"
+       version="2.0.1" 
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-	<import addon="script.common.plugin.cache" version="0.9.0"/>
-	<import addon="script.module.parsedom" version="0.9.0"/>
-	<import addon="script.module.simple.downloader" version="0.9.0"/>
+	<!-- Waiting for dependency to become final
+	<import addon="script.common.plugin.cache" version="0.9.1"/>
+	<import addon="script.module.parsedom" version="0.9.1"/>
+	<import addon="script.module.simple.downloader" version="0.9.1"/>
+	-->
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
