@@ -1,8 +1,8 @@
 <settings>
    <setting id="type" type="select" lvalues="30001|30002|30003" label="30000" default="MP4:HD"/>
+   <!-- Waiting for simple downloader to become final
    <setting id="download" type="bool" label="30004" default="false"/>
    <setting id="downloadPath" type="folder" enable="eq(-1,true)" label="30005" default="" /> 
-   <setting id="hideDuringPlayback" type="bool" enable="eq(-2,true)" label="30006" default="true" />
-   <setting id="notification_length" type="enum" enable="eq(-3,true)" label="30007" values="1|2|3|4|5|6|7|8|9|10" default="2" />
-   <setting id="folder" type="bool" enable="eq(-4,true)" label="30008" default="true"/>
+   <setting id="folder" type="bool" enable="eq(-2,true)" label="30008" default="true"/>
+   -->
 </settings>
